# secure-file-transfer

./: Cargo.toml  README.md
client-conf/: auth  key.priv  key.pub
server-conf/: auth  key.priv
src/: auth.rs  client.rs  crypto.rs  lib.rs  proto.rs  server.rs
