[package]
name = "secure-file-transfer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { version = "1.0" }
bincode = { version = "1.3" }
bytes = { version = "1.4" }
blake3 = { version = "1.3", features = ["traits-preview"] }
async-bincode = { version = "0.7" }
chacha20poly1305 = { version = "0.10" }
p384 = { version = "0", features = ["serde", "ecdsa"] }
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }
tower = { version = "0", features = ["util", "make"] }
tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["json", "ansi", "env-filter", "std"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
