[package]
name = "secure-file-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
bincode = { version = "1.3" }
bytes = { version = "1.4" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tower = { version = "0.4", features = ["util", "make"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "ansi", "env-filter", "std"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
postcard = { version = "1.0" }
heapless = { version = "0.7" }
generic-array = { version = "0.14", features = ["serde"] }

# Async
futures = { version = "0.3" }
pin-project = { version = "1.0" }
tokio = { version = "1.25", features = ["full"] }
tokio-tower = { version = "0.6" }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Crypto
aead = { version = "0.5", features = ["getrandom", "bytes", "stream"] }
blake3 = { version = "1.3", features = ["traits-preview"] }
chacha20poly1305 = { version = "0.10" }
p384 = { version = "0.12", features = ["serde", "ecdsa"] }
